[gd_scene load_steps=120 format=2]

[ext_resource path="res://Sprites/arana_px-1-2.png" type="Texture" id=1]
[ext_resource path="res://Font/Estudiante.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/enemy_1.gd" type="Script" id=3]
[ext_resource path="res://Sprites/arana_ani.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 0, 212, 212 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 212, 212, 212 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 424, 212, 212 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 636, 212, 212 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 848, 212, 212 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 1060, 212, 212 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 1272, 212, 212 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 1484, 212, 212 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 1696, 212, 212 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 636, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 848, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1060, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1272, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1484, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1696, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1908, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2120, 1908, 212, 212 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 2120, 212, 212 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 212, 2120, 212, 212 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 424, 2120, 212, 212 )

[sub_resource type="SpriteFrames" id=114]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ) ],
"loop": true,
"name": "arana",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=115]
extents = Vector2( 56, 64 )

[node name="enemy" type="Node2D" groups=[
"enemys",
]]
script = ExtResource( 3 )

[node name="numero" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.3929
margin_top = -31.9771
margin_right = 97.6071
margin_bottom = 68.0229
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "-99"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arana-ani" type="AnimatedSprite" parent="."]
show_behind_parent = true
position = Vector2( 0.471939, 0 )
frames = SubResource( 114 )
animation = "arana"
frame = 2
speed_scale = 5.0
playing = true

[node name="arana_px-1-2" type="Sprite" parent="."]
visible = false
show_behind_parent = true
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 16 )
shape = SubResource( 115 )

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 4.0

[node name="TimerGolpe" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -48.0
margin_top = -40.0
margin_right = 48.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="enemyVictory" from="." to="." method="_on_enemy_enemyVictory"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerGolpe" to="." method="_on_TimerGolpe_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
